# tuners

./: .copier-answers.yml  .editorconfig  .envrc  .gitignore  .ignore  BEETS_CONFIG_MAPPING.md  CLAUDE.md  Cargo.toml  Justfile  README.md  ROADMAP.md  cog.toml  flake.nix  rustfmt.toml  test.tape  treefmt.toml
.config/: flake.lock.license  flake.nix  git-hooks.nix  treefmt.nix
.config/devshells/: default.nix
.config/release/: mod.just
.config/reuse/: mod.just
src/: app.rs  codecs.rs  credit.rs  main.rs  models.rs  scanner.rs  terminal.rs  ui.rs
src/musicbrainz/: client.rs  mod.rs  search.rs
src/scanner/: metadata.rs  mod.rs
