# SPDX-FileCopyrightText: (C) 2025 chris montgomery <chmont@protonmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "tuners"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Chris Montgomery <chmont@protonmail.com>"]

[[bin]]
name = "tune"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
id3 = "1"
metaflac = "0.2"
mp3-duration = "0.1.10"
mp4ameta = "0.13.0"
musicbrainz_rs = "0.12.0"
ratatui = "0.30.0-beta"
ratatui-macros = "0.6.0"
rayon = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
tokio = { version = "1.40.0", features = ["full"] }
walkdir = "2"
